--- a/versuch_3/bibliography.tex
+++ b/versuch_3/bibliography.tex
@@ -3,4 +3,9 @@
 \bibitem[Dem]{troeder} DEMTRÖDER, Wolfgang. Experimentalphysik 1: Mechanik und Warme. Springer DE, 2005.
 \bibitem[Reib]{wiki} Wikipedia. Tabellarische Auflistung von Rollreibungskoeffizienten. http://de.wikipedia.org/wiki/Rollreibung. (11. Januar 2014)
 \bibitem[Eul]{eul} Wikipedia. Tabellarische Auflistung von Rollreibungskoeffizienten. http://de.wikipedia.org/wiki/Rollreibung. (11. Januar 2014)
+\bibitem[Win]{win} Wikipedia. Artikel zu Winddruck und Windlast. http://de.wikipedia.org/wiki/Winddruck (19. November 2014)
+\bibitem[Rol]{rol} Wikipedia. Rollwiderstand. http://de.wikipedia.org/wiki/Rollreibung (19. November 2014)
+
+
+
 \end{thebibliography}
